Fix elements collapsing in low vw devices

--- a/src/index.css
+++ b/src/index.css
@@ -15,4 +15,5 @@
 
 body {
   font-family: "Commissioner", sans-serif;
+  min-width: 280px;
 }
